<resources>
    <string name="app_name">Main_Activity</string>
    <string name="bmi">BMI Calculator</string>
    <string name="BtnBMI">Calculate BMI</string>
    <string name="BMI_holder">The BMI/KG is :</string>
    <string name="BMI_textview">00.00</string>
    <string name="weight_input">63.90</string>
    <string name="height_input">1.90</string>
    <string name="EnterWeightMessage">Enter Weight (Kg)</string>
    <string name="EnterHeightMessage">Enter Height (m) </string>
    <string name="Register"> Register</string>
    <string name="Login">Go to Login</string>
    <string name="fitness_app">Fitness app</string>
    <string name="workout">Workout</string>
    <string name="Calendar">Calendar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="calendar_fragment">calendar fragment</string>

</resources>